--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,16 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# logs the SQL statements
+# basic log level for all messages
+logging.level.org.hibernate=info
+# SQL statements and parameters
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
