--- a/kanban-front/package.json
+++ b/kanban-front/package.json
@@ -14,6 +14,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0"
+    "dayjs": "^1.11.10",
+    "@ant-design/icons": "^5.2.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
