--- a/kanban-front/package.json
+++ b/kanban-front/package.json
@@ -13,7 +13,8 @@
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
