--- a/kanban-front/package.json
+++ b/kanban-front/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "antd": "^5.24.2",
-    "dayjs": "^1.11.13",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
