--- a/my-kanban/src/main/resources/application.properties
+++ b/my-kanban/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:h2:file:./data/kanban;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
@@ -32,9 +32,5 @@ spring.data.rest.base-path=/api
 spring.data.rest.defaultMediaType=application/json
 springdoc.show-spring-data-rest=false
 
-# Configuration H2 (base de données en mémoire)
-spring.datasource.driver-class-name=org.h2.Driver
 
-# Debug SQL
-spring.jpa.show-sql=true
 
